--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Neucha&family=Open+Sans:wght@300&display=swap');
 
 :root {
     /*Colors*/
@@ -34,29 +34,25 @@ h2{
 h3{
     font-size: 34px;
 }
-section{
-    width: 1110px;
-    margin-top:100px;
-    margin-bottom: 100px;
-}
 body{
     background-repeat: no-repeat;
     background-size: cover;
     opacity: 90%;
     background-color: var(--light);
     background-image:url(/img/image\ 1.png);
+
 }
 .main-1-img{
     height: 525px;
     top:55px;
-    right: -270px;
     width: 1082px;
-    margin-left: 700px;
+    position: absolute;
 }
 
 .text{
     width: 540px;
-    margin: 30px;
+    margin: 30px 30px 30px 0px;
+    color: var(--color-font);
 }
 .moreDetailed{
     margin: 12px 24px;
@@ -78,14 +74,13 @@ body{
 /* */
 .container-heder{
     display: flex;
-    width: 100%;
-    justify-content: center;
-    flex-wrap: wrap;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    
 }
 .row{
-    display: flex;
-    
+    display: flex;  
 }
 .colum{
 display: flex;
@@ -97,11 +92,7 @@ flex-direction: column;
 .margin-top-0{
     margin-top: 0;
 }
-.heading-heder{
-    position: absolute;
-    top:10px;
-    right: 770px;
-}
+
 .position-relative{
     position: relative;
 }
@@ -110,7 +101,6 @@ flex-direction: column;
     height: 49px;
     background-color: var(--main-color);
     border: 0;
-    margin-left: 200px;
 }
 a{
     color: white;
@@ -128,9 +118,9 @@ p{
     color: var(--main-font);
 }
 /*http://caring-door.surge.sh/ - 1 слайд*/
-/* container - main content*/
-.container-main{
-    margin-top: 5%;
+/*  PREVIEW */
+.container-preview{
+    margin-top: 7%;
     display: flex;
     justify-content: center;
 }
@@ -139,4 +129,61 @@ p{
 }
 .margin-bottom-30{
     margin-bottom: 30px;
+}
+/* CARD */
+.background-color-black{
+    background-color: var(--main-color-black) ;
+    background-size: cover; 
+}
+
+.container-cards{
+    margin-top: 7%;
+    display: flex;
+    width: 100%px;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    margin: 0;
+}
+
+.heading-card{
+    font-size: 52px;
+    margin: 0;
+}
+.title-card{
+    font-size: 34px;
+}
+.subtitle-card{
+    color: var(--color-font);
+    font-family: var(--main-font);
+    font-size: 16px;
+    height: 130px;
+    width: 302px;
+    line-height:1.6;
+    font-weight: 600;
+}
+.number-card{
+padding-bottom: 40px;
+font-size: 64px;
+font-family: var(--heading-font);
+line-height:1;
+}
+.card-background-color-blac{
+    background-color: var(--main-color-black);
+    width:350px;
+    height:323px;
+    padding: 24px 24px 24px 24px;
+    margin: 28px;
+    justify-content: space-around;
+    color: var(--light);
+    font-family: var(--heading-font);
+}
+.card{
+    background-color: var(--light);
+    width:350px;
+    height:323px;
+    padding: 24px 24px 24px 24px;
+    margin: 28px;
+    justify-content: space-around;
 }
