--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,9 @@ h2{
 h3{
     font-size: 34px;
 }
+h5{
+    font-size: 14px;
+}
 body{
     background-repeat: no-repeat;
     background-size: cover;
@@ -112,10 +115,12 @@ a{
 .align-items-center{
     align-items: center;
 }
-p{
-    font-size: var(--font-size);
-    font-family: Open Sans;
-    color: var(--main-font);
+.subtitle{
+    color: var(--color-font);
+    font-family: var(--main-font);
+    font-size: 16px;
+    line-height:1.6;
+    font-weight: 600;
 }
 /*http://caring-door.surge.sh/ - 1 слайд*/
 /*  PREVIEW */
@@ -197,4 +202,58 @@ line-height:1;
 .card:hover{
     background-color: var(--main-color-black);
     color: var(--light);
+}
+/* ikea effect */
+.ikea-effect-container{
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.align-items-flex-start{
+    align-items: flex-start;
+}
+.title-ikea-head{
+    margin: 0 0 40px 0;
+}
+.distortions-ikea{
+    color: var(--translucentBlack);
+    font-family: var(--heading-font);
+    font-weight: 100;
+    font-size: 24px;
+    margin: 10px 0 0 0;
+}
+.subtitle-ikea{
+    width: 502px;
+    height: 120px;
+}
+
+.text-ikea{
+    width: 540px;
+    height: 125px;
+    margin-right: 15px;
+}
+.title-ikea{
+    width: 1100px;
+    height: 26px;
+    background-color: var(--brown);
+    line-height: 1.6em;
+
+}
+.text-white{
+    color: var(--light);
+    margin: 0 0 0 10px;
+}
+.footer-ikea{
+    width: 1100px;
+    height: 171px;
+    justify-content: space-between;
+
+}
+.heder-ikea{
+ width: 502px;
+ justify-content: space-evenly;
+}
+.subtitle-ikea-head{
+    font-size: 34px;
 }
